--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "*" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -33,4 +33,4 @@ jobs:
       - name: Run test shell
         run: |
           chmod +x ${GITHUB_WORKSPACE}/test.sh
-          ${GITHUB_WORKSPACE}/test.sh
+          ${GITHUB_WORKSPACE}/test.sh ${{ github.run_attempt }}
