--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Run test shell
         run: |
           chmod +x ${GITHUB_WORKSPACE}/test.sh
-          ${GITHUB_WORKSPACE}/test.sh
+          ${GITHUB_WORKSPACE}/test.sh ${{ github.run_attempt }}
