--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
           clean: false
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Check ENV
+        run: env
       - run: |
           echo "Localization: $LOCALIZATION"
           echo "Config: $CONFIG"
