--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,11 +69,5 @@ jobs:
       - name: Create pull request
         if: ${{ inputs.create_pr }}
         run: |
-          date > date.txt
-          git branch PR_${{ github.run_number }}
-          git checkout PR_${{ github.run_number }}
-          git add .
-          git commit -m "[Build Machine] Auto fetch and build #PR_${{ github.run_number }}"
-          git push -u origin PR_${{ github.run_number }}
-          gh pr create -B main -H PR_${{ github.run_number }} -f
+          ifconfig
 
